--- a/community-modules/styles/src/internal/base/parts/_grid-borders.scss
+++ b/community-modules/styles/src/internal/base/parts/_grid-borders.scss
@@ -100,7 +100,7 @@
 
     .ag-cell.ag-selection-fill-right,
     .ag-cell.ag-selection-fill-right.ag-cell-range-selected {
-        @include ag.unthemed-rtl((border-right: 1px dashed var(--ag-range-selection-border-color)));
+        @include ag.unthemed-rtl((border-right: 1px dashed var(--ag-range-selection-border-color) !important));
     }
 
     .ag-cell.ag-selection-fill-bottom,
@@ -111,7 +111,7 @@
 
     .ag-cell.ag-selection-fill-left,
     .ag-cell.ag-selection-fill-left.ag-cell-range-selected {
-        @include ag.unthemed-rtl((border-left: 1px dashed var(--ag-range-selection-border-color)));
+        @include ag.unthemed-rtl((border-left: 1px dashed var(--ag-range-selection-border-color) !important));
     }
 
     .ag-fill-handle, .ag-range-handle {
